crates/tui/tests/storybook/snapshots/app_transcript_view_state__transcript_settings_view_and_limits.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 86 14
  0   0   1 fg=AnsiValue(9)
  0   1   5 attrs=dim
  0   7  10 fg=Rgb { r: 255, g: 255, b: 255 }
  0  17  12 fg=Rgb { r: 253, g: 151, b: 31 }
  0  75  10 attrs=dim
  1   2  18 fg=AnsiValue(9)
  2   2   9 fg=AnsiValue(9)
  3   2  15 attrs=dim
 10   0   1 fg=AnsiValue(237)
 10   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 10   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 10   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 10   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 10   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 10  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 10  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 10  13  73 fg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 12   0  86 fg=AnsiValue(237)
 13   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 13  10  68 bg=AnsiValue(233)
 13  78   8 fg=AnsiValue(244) bg=AnsiValue(233)
